<resources>
    <string name="app_name">Gas Delivery</string>
    <string name="text_Total">Total Gas</string>
    <string name="text_k">K Gas</string>
    <string name="text_lake">Lake Gas</string>
    <string name="text_pro">Pro Gas</string>
    <string name="text_expanded">Item selected</string>
    <string name="text_collapsed">Make selection</string>

    <string-array name="Total_Gas">
        <item>Total 6kg Refill</item>
        <item>Total 13kg Refill</item>
        <item>Total 6kg Complete Gas</item>
        <item>Total 13kg Complete Gas</item>
        <item>Total 6kg Empty Gas Cylinder</item>
        <item>Total 13kg Empty Gas Cylinder</item>
    </string-array>

    <string-array name="K_Gas">
        <item>k Gas 6kg Refill</item>
        <item>K Gas 13kg Refill</item>
        <item>K Gas 6kg Complete Gas</item>
        <item>K Gas 13kg Complete Gas</item>
        <item>K Gas 6kg Empty Gas Cylinder</item>
        <item>K Gas 13kg Empty Gas Cylinder</item>
    </string-array>

    <string-array name="Lake_Gas">
        <item>Lake Gas 6kg Refill</item>
        <item>Lake Gas 13kg Refill</item>
        <item>Lake Gas 6kg Complete Gas</item>
        <item>Lake Gas 13kg Complete Gas</item>
        <item>Lake Gas 6kg Empty Gas Cylinder</item>
        <item>Lake Gas 13kg Empty Gas Cylinder</item>
    </string-array>

    <string-array name="Pro_Gas">
        <item>Pro Gas 6kg Refill</item>
        <item>Pro Gas 13kg Refill</item>
        <item>Pro Gas 6kg Complete Gas</item>
        <item>Pro Gas 13kg Complete Gas</item>
        <item>Pro Gas 6kg Empty Gas Cylinder</item>
        <item>Pro Gas 13kg Empty Gas Cylinder</item>
    </string-array>


    <string name="client_details">Contact Information</string>
    <string name="gas_info">Gas Information</string>
    <string name="gas_order">Order Gas</string>
    <string name="choose_gas_type">choose gas type:</string>
    <string name="choose_weight">choose size/weight</string>
    <string-array name="gas_type">
        <item>K-GAS</item>
        <item>PRO GAS</item>
        <item>TOTAL</item>
        <item>LAKE GAS</item>
        <item>HASHI</item>
        <item>OTHER</item>
    </string-array>
    <string-array name="gas_weight">
        <item>6kg</item>
        <item>13kg</item>
    </string-array>
    <string name="order_btn">Place Order</string>
    <string name="choose_label">Choose method of payment:</string>
    <string name="mpesa">M-PESA</string>
    <string name="easypay">Easy pay</string>
    <string name="Bank_payment">Bank Payment</string>
    <string name="mpesa_detail">Pay with mpesa</string>
    <string name="mpesa_detail_label">Enter Mpesa Details To pay:</string>
    <string name="amount">Amount:</string>
</resources>
